# GEOS_OceanGridComp

./: CMakeLists.txt  GEOS_OceanGridComp.F90  GEOS_Ocean_DeclarePointers___.h  GEOS_Ocean_Export___.h  GEOS_Ocean_GetPointers___.h  GEOS_Ocean_Import___.h  GEOS_Ocean_Internal___.h  GEOS_Ocean_StateSpecs.rc  README.md
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: enforce-labels.yml
GEOSdatasea_GridComp/: CMakeLists.txt  DataSea_ExtData.yaml  GEOS_DataSeaGridComp.F90  GEOS_DataSea_StateSpecs.rc
MIT_GEOS5PlugMod/: .gitignore  MIT_GEOS5PlugMod.F90
MIT_GEOS5PlugMod/instructions/: checkout.txt  checkout_geosmitv11.1.1.txt  (+2 more)
MOM6_GEOSPlug/: CMakeLists.txt  MOM6_GEOSPlug.F90  MOM6_GEOSPlug_StateSpecs.rc
MOM6_GEOSPlug/mom6_app/1440x1080/: MAPL_Tripolar.cdl  MOM_input  MOM_override  MOM_parameter_doc.all  diag_table  input.nml
MOM6_GEOSPlug/mom6_app/2880x2240/: MOM_input  MOM_override  MOM_saltrestore  README.md
MOM6_GEOSPlug/mom6_app/360x210/: MOM_input  MOM_override
MOM6_GEOSPlug/mom6_app/540x458/: MAPL_Tripolar.cdl  MOM_channels_global_tx06v1  MOM_input  MOM_override  MOM_parameter_doc.all  README.md  diag_table
MOM6_GEOSPlug/mom6_app/720x576/: MOM_input  MOM_override  MOM_saltrestore
MOM6_GEOSPlug/mom6_app/72x36/: MAPL_Tripolar.cdl  MOM_input  MOM_override  MOM_parameter_doc.all
MOM6_GEOSPlug/mom6_app/mkMAPLTripolar/: .gitignore  MAPL_Tripolar.cdl  README.md  mkMAPLTripolar.py
MOM6_GEOSPlug/mom6_app/mk_MAPL_Tripolar/: MAPL_Tripolar.cdl  README.md  mk_MAPL_Tripolar.py
MOM6_GEOSPlug/mom6_cmake/: CMakeLists.txt
MOM_GEOS5PlugMod/: CMakeLists.txt  MOM_GEOS5PlugMod.F90  MOM_GEOS5PlugMod_StateSpecs.rc
(+23 files in other folders)
